--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -389,6 +389,10 @@ limitations under the License. -->
   <string name="filter_note_desc"></string>
   <string name="filter_dividendnote_name">Dividendenanmerkung</string>
   <string name="filter_dividendnote_desc"></string>
+  <string name="filter_alertnote_name">Benachrichtigunganmerkung</string>
+  <string name="filter_alertnote_desc"></string>
+  <string name="filter_eventnote_name">Ereignisanmerkung</string>
+  <string name="filter_eventnote_desc"></string>
   <string name="filter_purchaseprice_name">Kaufpreis</string>
   <string name="filter_purchaseprice_desc"></string>
   <string name="filter_profit_name">Gewinn</string>
