--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -392,10 +392,14 @@ limitations under the License. -->
   <string name="filter_note_desc"></string>
   <string name="filter_dividendnote_name">Dividend note</string>
   <string name="filter_dividendnote_desc"></string>
+  <string name="filter_alert_name">Alert</string>
+  <string name="filter_alert_desc">With this Filter you select if stocks have alerts.</string>
   <string name="filter_alertnote_name">Alert note</string>
   <string name="filter_alertnote_desc"></string>
-  <string name="filter_eventnote_name">Event note</string>
-  <string name="filter_eventnote_desc"></string>
+  <string name="filter_event_name">Event</string>
+  <string name="filter_event_desc">With this Filter you select if stocks have events.</string>
+  <string name="filter_eventdetail_name">Event detail</string>
+  <string name="filter_eventdetail_desc"></string>
   <string name="filter_purchaseprice_name">Purchase price</string>
   <string name="filter_purchaseprice_desc"></string>
   <string name="filter_profit_name">Profit</string>
@@ -404,6 +408,8 @@ limitations under the License. -->
   <string name="filter_profitpercentage_desc"></string>
   <string name="filter_asset_name">Asset</string>
   <string name="filter_asset_desc"></string>
+  <string name="filter_assetnote_name">Asset note</string>
+  <string name="filter_assetnote_desc"></string>
   <string name="filter_dividendpercentage_name">Dividend %</string>
   <string name="filter_dividendpercentage_desc"></string>
   <string name="filter_firstassetsold_name">First asset sold</string>
@@ -422,10 +428,6 @@ limitations under the License. -->
   <string name="filter_capitalgain_desc"></string>
   <string name="filter_postmarket_name">Post market</string>
   <string name="filter_postmarket_desc">With this Filter you select if stocks are traded post market.</string>
-  <string name="filter_alert_name">Alert</string>
-  <string name="filter_alert_desc">With this Filter you select if stocks have alerts.</string>
-  <string name="filter_event_name">Event</string>
-  <string name="filter_event_desc">With this Filter you select if stocks have events.</string>
   <string name="filter_name">Filter name</string>
   <string name="filter_name_not_empty">Enter a filter name.</string>
   <string name="add_filter_set">Add filter set</string>
