--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -263,6 +263,7 @@ limitations under the License. -->
   <string name="onlinedata_fiftyTwoWeekRange">Jahresbereich</string>
   <string name="onlinedata_regularMarketDayRange">Tagesbereich</string>
   <string name="onlinedata_regularMarketVolume">Marktvolumen</string>
+  <string name="onlinedata_sharesOutstanding">Ausstehende Aktien</string>
   <string name="onlinedata_marketCap">Marktkap.</string>
   <string name="onlinedata_trailingPE">Vergangenes P/E</string>
   <string name="onlinedata_priceEpsCurrentYear">Diesjähriges P/E</string>
