--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,13 +55,35 @@ limitations under the License. -->
   <string name="app_name" translatable="false">Stock Room</string>
 
   <!-- string-array -->
-  <string name="title_activity_settings">Settings</string>
-
-  <string name="general_header">General</string>
-
-  <string name="display_header">Display</string>
+  <string-array name="predefined_groups">
+    <item>Buy</item>
+    <item>Sell</item>
+    <item>Watch</item>
+    <item>Give away for free</item>
+    <item>Ask the cat</item>
+    <item>Stop looking at</item>
+    <item>Buy more</item>
+    <item>Group 1</item>
+    <item>Group 2</item>
+    <item>Group 3</item>
+    <item>Group 4</item>
+    <item>Group 5</item>
+  </string-array>
+  <string-array name="dividend_cycles">
+    <item>Monthly</item>
+    <item>Quarterly</item>
+    <item>Semi Annual</item>
+    <item>Annual</item>
+  </string-array>
+  <string-array name="filter_mode_items">
+    <item>All filters must match (&amp;&amp;)</item>
+    <item>At least one filter match (||)</item>
+  </string-array>
 
   <!-- Preference Titles -->
+  <string name="title_activity_settings">Settings</string>
+  <string name="general_header">General</string>
+  <string name="display_header">Display</string>
   <string name="feedback_header">Feedback</string>
   <string name="menu_sync">Update</string>
   <string name="menu_sort">Sort</string>
@@ -258,6 +280,7 @@ limitations under the License. -->
   <string name="onlinedata_messageBoardId">Board Id</string>
   <string name="onlinedata_financialCurrency">Currency</string>
   <string name="onlinedata_marketState">Market state</string>
+  <string name="onlinedata_not_applicable">n/a</string>
   <string name="json_default_filename">Portfolio %1$s</string>
   <string name="news_headline">News for %1$s</string>
   <string name="all_news_headline">Latest Finance News</string>
@@ -441,29 +464,4 @@ limitations under the License. -->
   <string name="filter_mode">Filter mode</string>
   <string name="delayed_quote">Delayed Quote</string>
   <string name="nasdaq_real_time_price">Nasdaq Real Time Price</string>
-  <string name="not_applicable">n/a</string>
-  <string-array name="predefined_groups">
-    <item>Buy</item>
-    <item>Sell</item>
-    <item>Watch</item>
-    <item>Give away for free</item>
-    <item>Ask the cat</item>
-    <item>Stop looking at</item>
-    <item>Buy more</item>
-    <item>Group 1</item>
-    <item>Group 2</item>
-    <item>Group 3</item>
-    <item>Group 4</item>
-    <item>Group 5</item>
-  </string-array>
-  <string-array name="dividend_cycles">
-    <item>Monthly</item>
-    <item>Quarterly</item>
-    <item>Semi Annual</item>
-    <item>Annual</item>
-  </string-array>
-  <string-array name="filter_mode_items">
-    <item>All filters must match (&amp;&amp;)</item>
-    <item>At least one filter match (||)</item>
-  </string-array>
 </resources>
