--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -279,6 +279,7 @@ limitations under the License. -->
   <string name="onlinedata_messageBoardId">Board-Id</string>
   <string name="onlinedata_financialCurrency">Währung</string>
   <string name="onlinedata_marketState">Marktstatus</string>
+  <string name="onlinedata_not_applicable">n.v.</string>
   <string name="json_default_filename">Aktien %1$s</string>
   <string name="news_headline">Nachrichten für %1$s</string>
   <string name="all_news_headline">Neueste Finanznachrichten</string>
@@ -462,4 +463,5 @@ limitations under the License. -->
   <string name="filter_mode">Filterart</string>
   <string name="delayed_quote">Verzögerter Aktienpreis</string>
   <string name="nasdaq_real_time_price">Nasdaq-Echtzeitpreis</string>
+  <string name="filter_regex_error_msg">Der reguläre Ausdruck \'%1$s\' für den Filter ist ungültig.</string>
 </resources>
