--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -280,6 +280,7 @@ limitations under the License. -->
   <string name="onlinedata_messageBoardId">Board Id</string>
   <string name="onlinedata_financialCurrency">Currency</string>
   <string name="onlinedata_marketState">Market state</string>
+  <string name="onlinedata_not_applicable">n/a</string>
   <string name="json_default_filename">Portfolio %1$s</string>
   <string name="news_headline">News for %1$s</string>
   <string name="all_news_headline">Latest Finance News</string>
@@ -463,4 +464,5 @@ limitations under the License. -->
   <string name="filter_mode">Filter mode</string>
   <string name="delayed_quote">Delayed Quote</string>
   <string name="nasdaq_real_time_price">Nasdaq Real Time Price</string>
+  <string name="filter_regex_error_msg">The filter regex \'%1$s\' is not valid.</string>
 </resources>
