--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -467,7 +467,7 @@ limitations under the License. -->
   <string name="table_column_symbol">Aktien- kürzel</string>
   <string name="table_column_Name">Name</string>
   <string name="table_column_MarketPrice">Marktpreis</string>
-  <string name="table_column_MarketChange">Marktpreis- änderung</string>
+  <string name="table_column_MarketChange">Marktpreisänderung</string>
   <string name="table_column_Quantity">Anzahl</string>
   <string name="table_column_Purchaseprice">Kaufpreis</string>
   <string name="table_column_Asset">Bestand</string>
