--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -447,6 +447,8 @@ limitations under the License. -->
   <string name="filter_AfterDateType">after date</string>
   <string name="filter_ContainsTextType">contains</string>
   <string name="filter_NotContainsTextType">not contains</string>
+  <string name="filter_SimilarTextType">is similar to</string>
+  <string name="filter_NotSimilarTextType">is similar to</string>
   <string name="filter_IsEmptyTextType">is empty</string>
   <string name="filter_IsNotEmptyTextType">is not empty</string>
   <string name="filter_StartsWithTextType">starts with</string>
