--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -142,6 +142,9 @@ limitations under the License. -->
   <string name="price">Price</string>
   <string name="quantity">Quantity</string>
   <string name="value">Value</string>
+  <string name="marketchange">Market Change</string>
+  <string name="marketvalue">Market Value</string>
+  <string name="date">Date</string>
   <string name="no_total_quantity">Buy some shares first.</string>
   <string name="remove_quantity_exceeds_total_quantity">Quantity must be smaller than the total quantity of shares.</string>
   <string name="dividend_in_list">Dividend:</string>
@@ -355,7 +358,6 @@ limitations under the License. -->
   <string name="set_annual_dividend_label">New annual dividend rate</string>
   <string name="onlineAnnualDividendData">Online data</string>
   <string name="no_dividend_data">No online dividend data.</string>
-  <string name="date">Date</string>
   <string name="community_search_links">Community and Search links</string>
   <string name="price_preview_header">Price preview</string>
   <string name="no_assets">No assets</string>
