update asset list

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -139,11 +139,13 @@ limitations under the License. -->
   <string name="invalid_number">Ungültige Eingabe</string>
   <string name="number_of_stock">Anzahl</string>
   <string name="price">Kaufpreis</string>
-  <string name="quantity">Anzahl</string>
-  <string name="value">Wert</string>
-  <string name="marketchange">Marktpreisänderung</string>
-  <string name="marketvalue">Marktpreis</string>
-  <string name="date">Datum</string>
+  <string name="assetlistprice">Kaufpreis</string>
+  <string name="assetlistquantity">Anzahl</string>
+  <string name="assetlisttotal">Wert</string>
+  <string name="assetlistchange">Bestandsänderung</string>
+  <string name="assetlistvalue">Bestand</string>
+  <string name="assetlistdate">Datum</string>
+  <string name="assetlistnote">Anmerkung</string>
   <string name="no_total_quantity">Kaufen Sie zuerst einige Aktien.</string>
   <string name="remove_quantity_exceeds_total_quantity">Die Anzahl muss kleiner als die Gesamtanzahl sein.</string>
   <string name="dividend_in_list">Dividende:</string>
