--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -140,11 +140,13 @@ limitations under the License. -->
   <string name="invalid_number">Invalid number</string>
   <string name="number_of_stock">Number of shares</string>
   <string name="price">Price</string>
-  <string name="quantity">Quantity</string>
-  <string name="value">Value</string>
-  <string name="marketchange">Market Change</string>
-  <string name="marketvalue">Market Value</string>
-  <string name="date">Date</string>
+  <string name="assetlistprice">Price</string>
+  <string name="assetlistquantity">Quantity</string>
+  <string name="assetlisttotal">Value</string>
+  <string name="assetlistchange">Asset change</string>
+  <string name="assetlistvalue">Asset value</string>
+  <string name="assetlistdate">Date</string>
+  <string name="assetlistnote">Note</string>
   <string name="no_total_quantity">Buy some shares first.</string>
   <string name="remove_quantity_exceeds_total_quantity">Quantity must be smaller than the total quantity of shares.</string>
   <string name="dividend_in_list">Dividend:</string>
