--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -388,6 +388,8 @@ limitations under the License. -->
   <string name="filter_symbolname_desc"></string>
   <string name="filter_displayname_name">Display name</string>
   <string name="filter_displayname_desc"></string>
+  <string name="filter_marketcap_name">Market Capitalization</string>
+  <string name="filter_marketcap_desc">Market Capitalization is in Millions.\nFor example 40 is 40000000 = 40M Market Cap.</string>
   <string name="filter_quotetype_name">Quote type</string>
   <string name="filter_quotetype_desc"></string>
   <string name="filter_stockexchangename_name">Stock exchange name</string>
@@ -453,6 +455,7 @@ limitations under the License. -->
   <string name="load_filter_error">The filter could not be loaded:\n%1$s</string>
   <string name="filter_GreaterThanType">greater than</string>
   <string name="filter_LessThanType">less than</string>
+  <string name="filter_EqualType">equals</string>
   <string name="filter_BeforeDateType">before date</string>
   <string name="filter_AfterDateType">after date</string>
   <string name="filter_ContainsTextType">contains</string>
