--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -423,14 +423,10 @@ limitations under the License. -->
   <string name="filter_dividendpayed_desc"></string>
   <string name="filter_dividendpayedytd_name">Ausgezahlte Dividende YTD</string>
   <string name="filter_dividendpayedytd_desc"></string>
-  <string name="filter_firstassetsold_name">Früheste Aktien verkauft</string>
-  <string name="filter_firstassetsold_desc"></string>
-  <string name="filter_firstassetbought_name">Früheste Aktien gekauft</string>
-  <string name="filter_firstassetbought_desc"></string>
-  <string name="filter_lastassetsold_name">Letzte Aktien verkauft</string>
-  <string name="filter_lastassetsold_desc"></string>
-  <string name="filter_lastassetbought_name">Letzte Aktien gekauft</string>
-  <string name="filter_lastassetbought_desc"></string>
+  <string name="filter_assetsolddate_name">Aktienverkaufsdatum</string>
+  <string name="filter_assetsolddate_desc"></string>
+  <string name="filter_assetboughtdate_name">Aktienkaufdatum</string>
+  <string name="filter_assetboughtdate_desc"></string>
   <string name="filter_longterm_name">Letzte Aktien vor einem Jahr gekauft</string>
   <string name="filter_longterm_desc">Aktien die vor einem Jahr oder mehr gekauft worden sind, haben beim Verkauf einen Steuervorteil.</string>
   <string name="filter_quantity_name">Aktienanzahl</string>
