--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -424,14 +424,10 @@ limitations under the License. -->
   <string name="filter_dividendpayed_desc"></string>
   <string name="filter_dividendpayedytd_name">Dividend payed YTD</string>
   <string name="filter_dividendpayedytd_desc"></string>
-  <string name="filter_firstassetsold_name">First asset sold</string>
-  <string name="filter_firstassetsold_desc"></string>
-  <string name="filter_firstassetbought_name">First asset bought</string>
-  <string name="filter_firstassetbought_desc"></string>
-  <string name="filter_lastassetsold_name">Last asset sold</string>
-  <string name="filter_lastassetsold_desc"></string>
-  <string name="filter_lastassetbought_name">Last asset</string>
-  <string name="filter_lastassetbought_desc"></string>
+  <string name="filter_assetsolddate_name">Asset sold date</string>
+  <string name="filter_assetsolddate_desc"></string>
+  <string name="filter_assetboughtdate_name">Asset bought date</string>
+  <string name="filter_assetboughtdate_desc"></string>
   <string name="filter_longterm_name">Last asset bought long term</string>
   <string name="filter_longterm_desc">Stocks bought at least one year ago have less capital gain tax when sold.</string>
   <string name="filter_quantity_name">Stock quantity</string>
