--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -477,6 +477,7 @@ limitations under the License. -->
   <string name="table_column_Name">Name</string>
   <string name="table_column_MarketPrice">Market price</string>
   <string name="table_column_MarketChange">Market change</string>
+  <string name="table_column_MarketCurrency">Currency</string>
   <string name="table_column_Quantity">Quantity</string>
   <string name="table_column_Purchaseprice">Purchase price</string>
   <string name="table_column_Asset">Asset</string>
